--- a/styles/style.css
+++ b/styles/style.css
@@ -33,14 +33,15 @@ header{
     margin-top: 0px;
 }
 header img{
-    margin-right: 560px;
+    margin-right: 580px;
     width:200px;
 }
 header nav a{
     text-decoration: none;
     margin-left: 25px;
-    font-size: 25px;
+    font-size: 22px;
     color: #1A1A1A;
+    margin-right: 10px;
 }
 #background-main{
     width: 100%; 
@@ -62,6 +63,7 @@ header nav a{
 #absolute-text p{
     width: 620px;
     font-size: 20px;
+    margin-left: 20px;
     text-align: center;
 }
 
