--- a/styles/style.css
+++ b/styles/style.css
@@ -66,4 +66,111 @@ header nav a{
     margin-left: 20px;
     text-align: center;
 }
+#title-main2 h2{
+    border-bottom: 4px solid #00B172;
+    width: 350px;
+    margin: 0 auto;
+    margin-top: 35px;
+    font-size: 35px;
+    padding-bottom: 8px;
+}
+#containers-info{
+    display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-evenly;
+	align-items: center;
+	align-content: center;
+    margin-top: 70px;
+    margin-bottom: 70px;
+}
+#containers-info img{
+width: 125px;
+}
+.individual-container{
+    text-align: center;
+    width: 250px;
+    font-size: 20px;
+}
+.individual-container h3{
+    color: #00B172;
+}
+
+footer{
+    width: 1300px;
+    height: 780px;
+    background-color:#00B172 ;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    font-family: "Montserrat", sans-serif;
+
+}
+footer h2{
+    border-bottom: 4px solid white;
+    max-width: 435px;
+    padding-bottom: 10px;
+    margin-bottom: 50px;
+
+}
+#left-content-footer{
+    color: white;
+
+}
+
+#icon-white{
+    width: 60px;
+    
+}
+#spotify-app-image{
+    width: 350px;
+    margin-top: 70px;
+    margin-left: 150px;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between; 
+    align-items: flex-start;
+    padding: 20px; 
+}
+
+#left-content-footer {
+    flex: 1; 
+    max-width: 60%; 
+    margin-left: 80px;
+    margin-top: 20px;
+    font-size: 20px;
+
+}
+footer p{
+    width: 340px;
+    padding-bottom: 20px;
+    padding-top: 30px;
+    
+}
+
+
+#footer-img {
+    flex: 1; 
+    max-width: 50%; 
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start; 
+    gap: 10px; 
+    float: left;
+   
+}
+#footer-img img {
+    max-width: 100%; 
+    
+}
+#icon-white{
+    position: absolute;
+    margin-top: 22%;
+    margin-left: -80px;
+    width: 150px;
+}
+
+
+
 
